[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullets/flechette.png" type="Texture" id=1]
[ext_resource path="res://Bullets/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 1 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )
SPEED = 120

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
